<resources>
    <string name="app_name">StockManager</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="commodity_kind">商品种类:</string>
    <string name="kind_hint">请输入商品种类</string>
    <string name="commodity_brand">商品品牌:</string>
    <string name="brand_hint">请输入商品品牌</string>
    <string name="commodity_model">商品型号:</string>
    <string name="model_hint">请输入商品型号</string>
    <string name="commodity_price">商品价格:</string>
    <string name="price_hint">请输入商品价格</string>
    <string name="commodity_number">商品数量:</string>
    <string name="nuber_hint">请输入商品数量</string>
    <string name="login_name">     请输入用户名</string>
    <string name="login_psd">     请输入密码</string>
    <string name="button_login">登录</string>
    <string name="forgetpsd">忘记密码</string>
    <string name="signup">注册</string>
    <string name="signup_name">请输入新手机号码</string>
    <string name="signup_psw">请输入新密码</string>
</resources>
