<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/add_commodity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"

    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/commodity_kind"
            android:textColor="#ffffff"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/kinds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_background"
            android:hint="@string/kind_hint"
            android:paddingLeft="10dp"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/commodity_brand"
            android:textColor="#ffffff"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/grands"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_background"
            android:hint="@string/brand_hint"
            android:paddingLeft="10dp"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/commodity_model"
            android:textColor="#ffffff"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_background"
            android:hint="@string/model_hint"
            android:paddingLeft="10dp"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/commodity_price"
            android:textColor="#ffffff"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_background"
            android:hint="@string/price_hint"
            android:inputType="number"
            android:paddingLeft="10dp"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/commodity_number"
            android:textColor="#ffffff"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_background"
            android:hint="@string/nuber_hint"
            android:paddingLeft="10dp"
            android:inputType="number"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">


        <Button
            android:id="@+id/comfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_select"
            android:text="确认添加"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>