<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:gravity="center">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/user_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher"
            app:civ_border_color="#ffffff"
            app:civ_border_width="2dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:visibility="invisible"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.2"
            android:orientation="vertical">

            <EditText
                android:id="@+id/login_name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/text_background"
                android:hint="@string/login_name"
                android:paddingLeft="10dp" />

            <EditText
                android:id="@+id/login_psw"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/text_background"
                android:ems="10"
                android:hint="@string/login_psd"
                android:inputType="textPassword"
                android:paddingLeft="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.2"
            android:gravity="center">

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_select"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/button_login"
                android:textColor="#ffffff"
                android:textSize="20sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/forget_psw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:padding="15dp"
                android:text="@string/forgetpsd"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/login_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@null"
                android:padding="15dp"
                android:text="@string/signup"
                android:textColor="#ffffff" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>